Add empty path check in PathGenerator (#2477)